@@ -13,3 +13,8 @@ proxy_password =
 
 # Location where downloaded installation files should be cached
 cache_location = cache
+
+[db]
+
+# Location to download latest DB from
+location = http://appsnap.googlecode.com/svn/trunk/appsnap/db.ini
